# changes since last release

  -- The Source_Type StateData now holds the actual old- and new-time sources
     (previously it held the source term predictor). This StateData is used to
     fill the sources_for_hydro MultiFab which provides the source terms used
     in the hydrodynamic update. Since it is StateData, this operation is done
     with a FillPatch. Consequently the sources_for_hydro data has meaningful
     data in both physical domain ghost zones and ghost zones at a coarse-fine
     interface (previously it only had meaningful data on fully interior ghost
     zones). Checkpoints will now have both old and new data. (#116, #253)

  -- The parameter castro.keep_sources_until_end has been removed.

  -- Source terms (gravity, rotation, etc.) have now been all coalesced into
     a single MultiFab. This reduces the memory footprint of the code. This
     negates the need for the code parameters update_state_between_sources and
     coalesce_update_diagnostics, so they have been removed. This will cause
     a change in results: the previous code behavior was to update the state
     with each successive source term as it was applied at the new time. Now
     every source term will be calculated using the same new-time state (the one
     coming out of the hydro) and the source terms are all applied to the state
     in one shot at the end. Note that both this and the old approach are
     second-order accurate in time. For problems that combine multiple
     source terms, this will cause changes that are larger than roundoff.
     In particular, if rotation is used in conjunction with other source terms,
     changes will be relatively large, because the Coriolis force depends on the
     velocity, so the source term is a bit different now that it is seeing a
     different velocity. (#165, #249)

  -- As of 17.10, there is a new option castro.plot_per_is_exact. If this
     is set to 1, timesteps will be shortened to exactly hit the time interval