@@ -588,11 +588,6 @@ no_composite                int            0
 # at the cost of an additional Poisson solve per timestep.
 do_composite_phi_correction int            1
 
-#  For all gravity types, we can choose a maximum level for explicitly
-#  calculating the gravity and associated potential. Above that level,
-#  we interpolate from coarser levels.
-max_solve_level             int            MAX_LEV-1
-
 # For non-Poisson gravity, do we want to construct the gravitational
 # acceleration by taking the gradient of the potential, rather than
 # constructing it directly?
