@@ -12,7 +12,6 @@ int         Gravity::verbose = 0;
 int         Gravity::no_sync = 0;
 int         Gravity::no_composite = 0;
 int         Gravity::do_composite_phi_correction = 1;
-int         Gravity::max_solve_level = MAX_LEV-1;
 int         Gravity::get_g_from_phi = 0;
 int         Gravity::use_mlmg_solver = 0;
 int         Gravity::mlmg_max_fmg_iter = 0;
