@@ -12,7 +12,6 @@ static int verbose;
 static int no_sync;
 static int no_composite;
 static int do_composite_phi_correction;
-static int max_solve_level;
 static int get_g_from_phi;
 static int use_mlmg_solver;
 static int mlmg_max_fmg_iter;
